// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with long date 1`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap "
>
  <p>
    Document title
  </p>
  <p>
    Author of document
  </p>
  <p>
    1 January 2017
  </p>
  <img
    alt="Document title"
    className="offset-bottom img-responsive"
    src="http://www.example.com/image.jpg"
    width="80"
  />
  <div
    className="offset-bottom"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Description of document",
      }
    }
  />
  <RaisedButton
    disabled={false}
    label="Download document"
    onTouchTap={[Function]}
  />
</div>
`;

exports[`rendering renders correctly with short date 1`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap "
>
  <p>
    Document title
  </p>
  <p>
    Author of document
  </p>
  <p>
    January 2017
  </p>
  <img
    alt="Document title"
    className="offset-bottom img-responsive"
    src="http://www.example.com/image.jpg"
    width="80"
  />
  <div
    className="offset-bottom"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Description of document",
      }
    }
  />
  <RaisedButton
    disabled={false}
    label="Download document"
    onTouchTap={[Function]}
  />
</div>
`;
